agora é possivel editar notas individuais tambem versao 0.86

--- a/public/professores/index.html
+++ b/public/professores/index.html
@@ -474,7 +474,7 @@
                             <div class="col-sm-6 mb-3">
                               <div class="card h-100">
                                 <div class="card-body">
-                                  <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">Notas</i>do aluno</h6>
+                                  <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">Notas</i>do aluno &nbsp;<span data-feather="edit" onclick="editaNotasAluno(`${document.getElementById('mostraMatriculaAluno').innerText}`, `${document.getElementById('mostraTurmaAluno').innerText}`)"></span></h6>
                                   <div id="notasDoAluno">
                                     <small id="nomeNota">...</small>
                                     <div class="progress mb-3" style="height: 5px">
