--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -575,9 +575,10 @@
                             <div class="col-sm-6 mb-3">
                               <div class="card h-100">
                                 <div class="card-body">
-                                  <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">Notas</i>do aluno</h6>
+                                  <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">Notas</i>do aluno </h6> 
+                                  <div id="somatorioNotas"></div>
                                   <div id="notasDoAluno">
-                                    <small id="nomeNota">...</small>
+                                    <small id="nomeNota">...</small><small id="notaReferencia">/100</small>
                                     <div class="progress mb-3" style="height: 5px">
                                       <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
