começando historico escolar e clolqeui cor nas notas pra ficar intuitivo

--- a/public/professores/index.html
+++ b/public/professores/index.html
@@ -384,13 +384,13 @@
                                 <span class="text-secondary" id="mostraDataNascimentoAluno">Data do Aluno</span>
                               </li>
                               <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                                <h6 class="mb-0"><span data-feather="file-text"></span> ...</h6>
-                                <span class="text-secondary">...</span>
+                                <a href="#turmasQueParticipa" id="turmasQueParticipa" onclick="historicoAluno(`${document.getElementById('mostraMatriculaAluno').innerText}`, `${document.getElementById('mostraTurmaAluno').innerText}`)" style="text-decoration: none;"><h6 class="mb-0"><span data-feather="file-text"></span> Histórico do aluno</h6></a>
+                                <span class="text-secondary"></span>
                               </li>
-                              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                              <!--<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                                 <h6 class="mb-0"><span data-feather="file-text"></span>...</h6>
                                 <span class="text-secondary">...</span>
-                              </li>
+                              </li>-->
                             </ul>
                           </div>
                         </div>
