--- a/public/professores/index.html
+++ b/public/professores/index.html
@@ -447,27 +447,31 @@
                             <div class="col-sm-6 mb-3">
                               <div class="card h-100">
                                 <div class="card-body">
-                                  <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">Desempenho</i>do aluno</h6>
-                                  <small>Audição</small>
-                                  <small id="pontosAudicao">1</small>
-                                  <div class="progress mb-3" style="height: 5px">
-                                    <div class="progress-bar bg-primary" id="barraPontosAudicao" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                  <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">Desempenho</i>do aluno &nbsp;<span data-feather="edit" onclick="lancaDesempenho(`${document.getElementById('mostraMatriculaAluno').innerText}`, `${document.getElementById('mostraTurmaAluno').innerText}`)"></span></h6>
+                                  <div id="notasDoAluno">
+                                    <small>Audição</small>
+                                    <small id="pontosAudicao">1</small>
+                                    <div class="progress mb-3" style="height: 10px">
+                                      <div class="progress-bar bg-primary" id="barraPontosAudicao" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                    <small>Fala</small>
+                                    <small id="pontosFala">1</small>
+                                    <div class="progress mb-3" style="height: 10px">
+                                      <div class="progress-bar bg-primary" id="barraPontosFala" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                    <small>Escrita</small>
+                                    <small id="pontosEscrita">1</small>
+                                    <div class="progress mb-3" style="height: 10px">
+                                      <div class="progress-bar bg-primary" id="barraPontosEscrita" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                    <small>Leitura</small>
+                                    <small id="pontosLeitura">1</small>
+                                    <div class="progress mb-3" style="height: 10px">
+                                      <div class="progress-bar bg-primary" id="barraPontosLeitura" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
                                   </div>
-                                  <small>Fala</small>
-                                  <small id="pontosFala">1</small>
-                                  <div class="progress mb-3" style="height: 5px">
-                                    <div class="progress-bar bg-primary" id="barraPontosFala" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
-                                  </div>
-                                  <small>Escrita</small>
-                                  <small id="pontosEscrita">1</small>
-                                  <div class="progress mb-3" style="height: 5px">
-                                    <div class="progress-bar bg-primary" id="barraPontosEscrita" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
-                                  </div>
-                                  <small>Leitura</small>
-                                  <small id="pontosLeitura">1</small>
-                                  <div class="progress mb-3" style="height: 5px">
-                                    <div class="progress-bar bg-primary" id="barraPontosLeitura" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-                                  </div>
+                                  
+                                  
                                 </div>
                               </div>
                             </div>
