agora é possivel distribuir e lançar desempenho dos alunos versao 0.87

--- a/public/professores/index.html
+++ b/public/professores/index.html
@@ -448,7 +448,7 @@
                               <div class="card h-100">
                                 <div class="card-body">
                                   <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2">Desempenho</i>do aluno &nbsp;<span data-feather="edit" onclick="lancaDesempenho(`${document.getElementById('mostraMatriculaAluno').innerText}`, `${document.getElementById('mostraTurmaAluno').innerText}`)"></span></h6>
-                                  <div id="notasDoAluno">
+                                  <div id="desempenhoAluno">
                                     <small>Audição</small>
                                     <small id="pontosAudicao">1</small>
                                     <div class="progress mb-3" style="height: 10px">
