terminei a mostragem do mapa de frequencias

--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -577,6 +577,22 @@
                     <p class="text-muted float-md-right" id="timestampDoAluno"></p>
                     <br>
                     <hr>
+                    <label class="h5">Mapa de frequências da turma atual</label>
+                    <div class="row">
+                      <div class="col">
+                        <div id="divFrequencias">
+                          <div class="row justify-content-start">
+                            <div class="col-3" style="background-color: rgba(86,61,124,.15);border: 1px solid rgba(86,61,124,.2);">Column</div>
+                            <div class="col-3" style="background-color: rgba(86,61,124,.15);border: 1px solid rgba(86,61,124,.2);">Column</div>
+                            
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div id="divTotalFrequencias">Total de presenças: <label id="totalFrequencias"></label> de <label id="qtdeAulasFrequencia"></label><br> Percentual de frequência atual em <label id="porcentagemFrequencia"></label></div>
+                      </div>
+                    </div>
+                    <hr>
                     <label class="h5">Histórico de operações</label>
                     <br>
                     <div class="col">
