consertando bug de frequencia duplicada e permitindo mais lançamentos de frequencia por dia

--- a/public/professores/index.html
+++ b/public/professores/index.html
@@ -618,7 +618,7 @@
                 <hr>
                 <p class="text-muted justify-content-end" id="timestampTurmaCadastrada"></p>
                 <hr>
-                <label class="h5">Mapa de frequências da Turma</label>
+                <label class="h5" id="tituloMapaFrequencias">Mapa de frequências da Turma</label>
                 <div id="divTotalFrequencias">Total de frequências lançadas: <label id="totalFrequenciasTurma"></label> de <label id="qtdeAulasFrequenciaTurma"></label><br> Percentual de frequência lançada em <label id="porcentagemFrequenciaTurma"></label></div>
                 <div id="divMapaFrequenciasTurma">
                   <div class="row justify-content-start">
