--- a/public/login.html
+++ b/public/login.html
@@ -72,7 +72,8 @@
   </header>
 <!-- Loader -->
 <div id="loader" class="window-loader">
-  <div class="loader"></div>
+  <label id="loaderMsg">Aguarde...</label>
+    <div class="loader"></div>
 </div>
   <!-- Parte principal -->
   <div class="modal" tabindex="-1" role="dialog" id="modal">
