--- a/public/professores/index.html
+++ b/public/professores/index.html
@@ -140,10 +140,10 @@
       </nav>
       <!-- Loader -->
       
-<div id="loader" class="window-loader">
-  <label id="loaderMsg" class="text-white-50 bg-dark">Aguarde...</label>
-    <div class="loader"></div>
-</div>
+      <div id="loader" class="window-loader">
+        <label id="loaderMsg">Aguarde...</label>
+          <div class="loader"></div>
+      </div>
 
     <div class="container-fluid">
       <div id="chat">                          
