--- a/public/aluno/index.html
+++ b/public/aluno/index.html
@@ -542,6 +542,7 @@
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
     <script src="../resources/popper/popper.min.js"></script>
     <script src="../resources/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../resources/jQuery/jquery.mask.min.js"></script>
 
     <!-- Packages for jsPDF -->
     <script src="../resources/jsPDF/dist/jspdf.min.js"></script>
