--- a/public/professores/index.html
+++ b/public/professores/index.html
@@ -26,7 +26,7 @@
 
   <body>
 
-    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" id="modal">
+    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" id="modal">
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
