--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -27,7 +27,7 @@
 
   <body>
 
-    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" id="modal">
+    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" id="modal">
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -545,12 +545,12 @@
                                 <span class="text-secondary" id="mostraDataNascimentoAluno">Data do Aluno</span>
                               </li>
                               <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                                <h6 class="mb-0"><span data-feather="file-text"></span> ...</h6>
-                                <span class="text-secondary">...</span>
+                                <a href="#turmasQueParticipa" id="turmasQueParticipa" onclick="historicoAluno(`${document.getElementById('mostraMatriculaAluno').innerText}`, `${document.getElementById('mostraTurmaAluno').innerText}`)" style="text-decoration: none;"><h6 class="mb-0"><span data-feather="file-text"></span> Histórico do aluno</h6></a>
+                                <span class="text-secondary"></span>
                               </li>
-                              <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                              <!--<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                                 <h6 class="mb-0"><span data-feather="file-text"></span>...</h6>
-                                <span class="text-secondary">...</span>
+                                <span class="text-secondary">...</span>-->
                               </li>
                             </ul>
                           </div>
