correção de alguns bugs de inicialização do sistema

--- a/public/login.html
+++ b/public/login.html
@@ -39,7 +39,7 @@
     initialize the SDK after all desired features are loaded, set useEmulator to false
     to avoid connecting the SDK to running emulators.
   -->
-  <script defer src="/__/firebase/init.js"></script>
+  <script defer src="/__/firebase/init.js?useEmulator=true"></script>
   <!--<script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth__pt_br.js"></script>-->
   
   <!-- Conteúdo do site - Website content -->
