--- a/public/resources/pdfsProntos/matriculaPdf.html
+++ b/public/resources/pdfsProntos/matriculaPdf.html
@@ -273,7 +273,7 @@ a:visited {text-decoration:none;}
           initialize the SDK after all desired features are loaded, set useEmulator to false
           to avoid connecting the SDK to running emulators.
         -->
-        <script  src="/__/firebase/init.js"></script>
+        <script  src="/__/firebase/init.js?useEmulator=true"></script>
 		<script>
 			var alunosRef = firebase.database().ref('sistemaEscolar/alunos')
 
