Revert "correção de alguns bugs de inicialização do sistema"
This reverts commit 8d3ce3a7e733625b9076228b1aab4cd35bca758c.

--- a/public/professores/index.html
+++ b/public/professores/index.html
@@ -85,7 +85,7 @@
           initialize the SDK after all desired features are loaded, set useEmulator to false
           to avoid connecting the SDK to running emulators.
         -->
-        <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+        <script defer src="/__/firebase/init.js"></script>
         
         <nav class="navbar navbar-light navbar-expand-lg sticky-top bg-light flex-md-nowrap p-0">
         <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="../">Nome da empresa</a>
