--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -460,7 +460,7 @@
                           </div>
                           <div class="col-sm-6">
                             <a href="#" class="btn btn-success" onclick="carregaListaDeAlunos()">&nbsp; <span class="feather-24" data-feather="refresh-cw"></span><span>Atualizar lista</span></a>
-                            <a href="#" id="desativaAlunos" class="btn btn-danger disabled" data-toggle="modal">&nbsp;<span class="feather-24" data-feather="trash"></span> <span>Desativar Alunos</span></a>						
+                            <a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal">&nbsp;<span class="feather-24" data-feather="trash"></span> <span>Delete</span></a>						
                           </div>
                         </div>
                       </div>
