--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Page Not Found</title>
+    <title>Página não encontrada</title>
 
     <style media="screen">
       body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
@@ -24,8 +24,8 @@
   <body>
     <div id="message">
       <h2>404</h2>
-      <h1>Page Not Found</h1>
-      <p>The specified file was not found on this website. Please check the URL for mistakes and try again.</p>
+      <h1>Página não encontrada</h1>
+      <p>A página que você solicitou não foi encontrada nos servidores. Se você acha que isto é um erro, contate os administradores do site.</p>
     </div>
   </body>
 </html>
