updates no design
A lista de alunos da nova turma já está com novo design, falta adaptar as funções.

--- a/public/professores/index.html
+++ b/public/professores/index.html
@@ -612,8 +612,8 @@
                             <h2>Alunos da <b>Turma</b></h2>
                           </div>
                           <div class="col-sm-6">
-                            <!--<a href="#" class="btn btn-success" onclick="carregaListaDeAlunos()">&nbsp; <span class="feather-24" data-feather="refresh-cw"></span><span>Atualizar lista</span></a>
-                            <a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal">&nbsp;<span class="feather-24" data-feather="trash"></span> <span>Delete</span></a>-->						
+                            <a href="#" class="btn btn-info" id="btnLancaNotas">&nbsp; <span class="feather-24" data-feather="edit"></span>Lançar Notas<span></span></a>
+                            <a href="#" class="btn btn-primary" id="btnLancaFrequencia">&nbsp; <span class="feather-24" data-feather="calendar"></span><span>Lançar Frequência</span></a>						
                           </div>
                         </div>
                       </div>
