lançamento de notas e desempenho
Agora os professores podem lançar notas de desempenho individuais e notas variadas em massa na aba de turmas

--- a/public/professores/index.html
+++ b/public/professores/index.html
@@ -559,7 +559,7 @@
                   <option selected hidden>Escolha uma turma...</option>
                 </select>
               </div>
-              <div class="container" id="areaInfoTurma" style="visibility: hidden;">
+              <div id="areaInfoTurma" style="visibility: hidden;">
                 <label class="h3" id="infoTurma">Turma</label>
                 <label class="text-muted float-right h5" id="codigoDaTurma"></label>
                 <div class="row">
