--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -428,7 +428,7 @@
               <label class="h3">Alunos</label>
               <button class="btn btn-light btn-sm float-right" onclick="alteraNotasDesempenho()">Alterar distribuição de desempenho <span data-feather="edit"></span></button>
               <br>
-              <div class="col">
+              <div>
                 <div class="container">
                   <div class="row">
                     <div class="form-group col-auto">
