melhora nas buscas e inicio da emissão de boletins
Os alunos ja conseguem emitir boletim de cursos já fechados porem esta em desenvolvimento ainda.
Aprimorei o sistema de busca de nomes de alunos nas listas

--- a/public/resources/pdfsProntos/matriculaPdf.html
+++ b/public/resources/pdfsProntos/matriculaPdf.html
@@ -299,6 +299,7 @@ a:visited {text-decoration:none;}
 
 			firebase.auth().onAuthStateChanged((user) => {
 				console.log(user)
+				console.log(window.location.hash)
 				if(window.location.hash) {
 					var matricula = window.location.hash.substring(1); //Puts hash in variable, and removes the # character
 					// hash found
